--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
         </div>
         <!-- Features section -->
         <div class="features-section border-[#000]">
-          <svg width="1920" height="970" viewBox="0 0 1920 970" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="w-full" height="970" viewBox="0 0 1920 970" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M1533.41 201.081H1920V960L0 970V0H1327.39C1356.42 0 1383.17 15.7207 1397.29 41.0788L1463.51 160.002C1477.63 185.36 1504.38 201.081 1533.41 201.081Z" fill="#F40009"/>
             </svg>            
         </div>
