--- a/index.html
+++ b/index.html
@@ -406,48 +406,149 @@
           <div class="hidden md:block div3">
             <img src="./assets/wallet.png" alt="" />
           </div>
-        </div>
-        <!-- Features section -->
-        <div class="features-section border-10 border-[#00ffff] px-3">
-          <svg
-            class="w-full"
-            height="970"
-            viewBox="0 0 1920 970"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M1533.41 201.081H1920V960L0 970V0H1327.39C1356.42 0 1383.17 15.7207 1397.29 41.0788L1463.51 160.002C1477.63 185.36 1504.38 201.081 1533.41 201.081Z"
-              fill="#F40009"
-            />
-          </svg>
-        </div>
+        </div> 
       </section>
       <!-- Hero Section End -->
 
-      <!-- FAQ Section Start -->
-      <section class="w-full my-10 md:my-20 mx-auto py-12 px-4 bg-[#F40009]">
-        <h1 class="poppins-bold text-6xl font-bold text-center mb-2 text-white">
-          FAQ's
-        </h1>
-        <p class="poppins-semibold text-3xl text-center mb-12">
-          We've got you covered
-        </p>
-        <div class="flex items-center justify-center">
-          <div class="md:w-1/2" id="faq-container"></div>
+      <!-- Features section start --> 
+      <section class="py-10 bg-[#F40009] px-[10%] ">
+        <div class="flex flex-wrap gap-8 px-4 md:px-8">
+          <div class="w-full qr-code flex md:items-center justify-between gap-6 flex-col items-start md:flex-row">
+            <div><img src="./assets//qr-code.svg" alt="SVG Image" /></div>
+            <div class="flex flex-col gap-3">
+              <h1 class="poppins-bold text-3xl md:text-6xl">
+                Scan the QR <br />
+                to download our app
+              </h1>
+              <p class="poppins-regular text-lg">
+                Download now and start enjoying the benefits of a cashless,
+                convenient, and rewarding shopping experience!
+              </p>
+            </div>
+          </div>
+          <!-- Feature Block -->
+          <div class="w-full flex justify-start md:justify-center flex-wrap gap-6 border-2 border-[#fff]">
+           
+          <div class="flex items-center justify-center gap-4 border-2 w-72 ">
+            <div
+              class="flex items-center justify-center rounded-full bg-white gap-3 p-6"
+            >
+              <img
+                class="md:h-10 md:w-10"
+                src="./assets/feature-icons/purchase.png"
+                alt=""
+              />
+            </div>
+            <div>
+              <span class="poppins-semibold">Seamless Purchases:</span>
+              <p class="poppins-regular">
+                Connect to any Coca-Cola vending machine that supports CokePay
+                and make quick, cashless transactions.
+              </p>
+            </div>
+          </div>
+          <div class="flex items-center justify-center gap-4 border-2 w-72 ">
+            <div
+              class="flex items-center justify-center rounded-full bg-white gap-3 p-4"
+            >
+              <img
+                class="md:h-10 md:w-10"
+                src="./assets/feature-icons/top-ups.png"
+                alt=""
+              />
+            </div>
+            <div>
+              <span class="poppins-semibold">Multiple Top-Up Options:</span>
+              <p class="poppins-regular">
+                Easily top up your balance with credit cards, debit cards, and
+                ATH for uninterrupted shopping.
+              </p>
+            </div>
+          </div>
+          <div class="flex items-center justify-center gap-4 border-2 w-72 ">
+            <div
+              class="flex items-center justify-center rounded-full bg-white gap-3 p-4"
+            >
+              <img
+                class="md:h-10 md:w-10"
+                src="./assets/feature-icons/ease-of-use.png"
+                alt=""
+              />
+            </div>
+            <div>
+              <span class="poppins-semibold">Ease of Use:</span>
+              <p class="poppins-regular">
+                Intuitive and user-friendly interface for a hassle-free shopping
+                experience.
+              </p>
+            </div>
+          </div>
+          <div class="flex items-center justify-center gap-4 border-2 w-72 ">
+            <div
+              class="flex items-center justify-center rounded-full bg-white gap-3 p-4"
+            >
+              <img
+                class="md:h-10 md:w-10"
+                src="./assets/feature-icons/payment.png"
+                alt=""
+              />
+            </div>
+            <div>
+              <span class="poppins-semibold">Versatile Payment Methods:</span>
+              <p class="poppins-regular">
+                Choose from a variety of top-up options to keep your balance
+                ready for your next purchase.
+              </p>
+            </div>
+          </div>
+          <div class="flex items-center justify-center gap-4 border-2 w-72 ">
+            <div
+              class="flex items-center justify-center rounded-full bg-white gap-3 p-4"
+            >
+              <img
+                class="md:h-10 md:w-10"
+                src="./assets/feature-icons/cashless.png"
+                alt=""
+              />
+            </div>
+            <div>
+              <span class="poppins-semibold">Cashless Transactions:</span>
+              <p class="poppins-regular">
+                Enjoy the convenience of cashless purchases, making it easier to
+                buy your favorite drinks on the go. Make your vending machine
+                purchases smarter and more rewarding with CokePay.
+              </p>
+            </div>
+          </div>
+        </div>
         </div>
       </section>
-      <!-- FAQ Section End -->
-
+      <!-- Features section end -->
+       
       <!-- Query Form Start-->
-      <section
-        class="flex flex-col items-center justify-center border-4 border-[#ff8900] px-8 md:px-24 py-4 my-10 md:my-20"
+        <section
+        class="flex flex-col items-center justify-center border-4 border-[#ff8900] px-8 md:px-24 py-4 py-4 md:py-10 my-10 md:my-20"
       >
-        <h1 class="poppins-semibold text-3xl md:text-6xl text-center my-10">
-          Got a Question? <br />
-          We're Here to Help!
-        </h1>
-
+        <div class="relative border-4 border-[#333]">
+          <h1 class=" poppins-semibold text-3xl md:text-5xl text-center my-10">
+            Got a Question? <br />
+            <span class="absolute left-[50%] right-[50%] z-[-1] translate">
+              <svg
+                    width="176"
+                    height="35"
+                    viewBox="0 0 176 35"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M0.728655 19.3056C2.19019 15.4548 7.67097 12.4865 10.2287 11.4837C21.921 6.67039 40.7383 4.26347 48.594 5.46693C56.4498 6.67039 47.8633 9.07692 40.3729 11.4836C32.8825 13.8904 38.3633 15.0937 45.1229 13.8904C51.8825 12.687 65.9498 11.4836 78.0075 10.882C90.0652 10.2803 77.8248 9.07692 65.9498 9.07692C54.0748 9.07692 54.2575 6.67029 58.4594 5.46693C62.6614 4.26357 72.1614 -0.549874 83.3056 0.0518062C94.4498 0.653487 120.758 1.85685 132.084 6.06861C143.411 10.2804 166.796 21.7123 172.46 25.3224C178.123 28.9325 177.392 39.161 167.344 33.1442C157.296 27.1274 136.469 16.2972 90.796 14.4921C45.1229 12.6871 10.4113 22.9157 6.75748 27.1274C3.10363 31.3392 0.545936 31.3392 2.00748 27.7291C3.46902 24.119 3.83443 23.5174 2.37289 24.7207C0.911348 25.9241 -1.09827 24.119 0.728655 19.3056Z"
+                      fill="#F40009"
+                    />
+                  </svg>
+            </span>
+            We're Here to Help!
+          </h1>  
+        </div> 
         <div
           class="flex flex-col gap-6 md:gap-10 items-center justify-center poppins-regular"
         >
@@ -494,6 +595,20 @@
         </div>
       </section>
       <!-- Query Form Start End -->
+      <!-- FAQ Section Start -->
+      <section class="w-full my-10 md:my-20 mx-auto py-12 px-4 bg-[#F40009]">
+        <h1 class="poppins-bold text-6xl font-bold text-center mb-2 text-white">
+          FAQ's
+        </h1>
+        <p class="poppins-semibold text-3xl text-center mb-12">
+          We've got you covered
+        </p>
+        <div class="flex items-center justify-center">
+          <div class="md:w-1/2" id="faq-container"></div>
+        </div>
+      </section>
+      <!-- FAQ Section End -->
+ 
       <!-- Footer Start -->
       <section
         class="relative bg-[#000] px-2 md:px-24 py-4 h-[60vh] md:h-[40vh] text-white"
@@ -1076,118 +1191,7 @@
           </p>
         </div>
       </section>
-      <!-- Footer End -->
-      <!-- Features Section Start-->
-      <section class="py-4 bg-[#F40009]">
-        <div class="flex flex-wrap gap-8 px-4 md:px-8">
-          <div class="qr-code flex items-center justify-between">
-            <div><img src="./assets//qr-code.svg" alt="SVG Image" /></div>
-            <div>
-              <h1 class="poppins-bold text-3xl md:text-4xl">
-                Scan the QR <br />
-                to download our app
-              </h1>
-              <p class="poppins-regular text-md">
-                Download now and start enjoying the benefits of a cashless,
-                convenient, and rewarding shopping experience!
-              </p>
-            </div>
-          </div>
-          <!-- Feature Block -->
-          <div class="flex items-center justify-center gap-4 border-2">
-            <div
-              class="flex items-center justify-center rounded-full bg-white gap-3 p-4"
-            >
-              <img
-                class="md:h-10 md:w-10"
-                src="./assets/feature-icons/purchase.png"
-                alt=""
-              />
-            </div>
-            <div>
-              <span class="poppins-semibold">Seamless Purchases:</span>
-              <p class="poppins-regular">
-                Connect to any Coca-Cola vending machine that supports CokePay
-                and make quick, cashless transactions.
-              </p>
-            </div>
-          </div>
-          <div class="flex items-center justify-center gap-4">
-            <div
-              class="flex items-center justify-center rounded-full bg-white gap-3 p-4"
-            >
-              <img
-                class="md:h-10 md:w-10"
-                src="./assets/feature-icons/top-ups.png"
-                alt=""
-              />
-            </div>
-            <div>
-              <span class="poppins-semibold">Multiple Top-Up Options:</span>
-              <p class="poppins-regular">
-                Easily top up your balance with credit cards, debit cards, and
-                ATH for uninterrupted shopping.
-              </p>
-            </div>
-          </div>
-          <div class="flex items-center justify-center gap-4">
-            <div
-              class="flex items-center justify-center rounded-full bg-white gap-3 p-4"
-            >
-              <img
-                class="md:h-10 md:w-10"
-                src="./assets/feature-icons/ease-of-use.png"
-                alt=""
-              />
-            </div>
-            <div>
-              <span class="poppins-semibold">Ease of Use:</span>
-              <p class="poppins-regular">
-                Intuitive and user-friendly interface for a hassle-free shopping
-                experience.
-              </p>
-            </div>
-          </div>
-          <div class="flex items-center justify-center gap-4">
-            <div
-              class="flex items-center justify-center rounded-full bg-white gap-3 p-4"
-            >
-              <img
-                class="md:h-10 md:w-10"
-                src="./assets/feature-icons/payment.png"
-                alt=""
-              />
-            </div>
-            <div>
-              <span class="poppins-semibold">Versatile Payment Methods:</span>
-              <p class="poppins-regular">
-                Choose from a variety of top-up options to keep your balance
-                ready for your next purchase.
-              </p>
-            </div>
-          </div>
-          <div class="flex items-center justify-center gap-4">
-            <div
-              class="flex items-center justify-center rounded-full bg-white gap-3 p-4"
-            >
-              <img
-                class="md:h-10 md:w-10"
-                src="./assets/feature-icons/cashless.png"
-                alt=""
-              />
-            </div>
-            <div>
-              <span class="poppins-semibold">Cashless Transactions:</span>
-              <p class="poppins-regular">
-                Enjoy the convenience of cashless purchases, making it easier to
-                buy your favorite drinks on the go. Make your vending machine
-                purchases smarter and more rewarding with CokePay.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- Features Section End -->
+      <!-- Footer End --> 
     </div>
     <script src="script.js"></script>
   </body>
