--- a/notes.html
+++ b/notes.html
@@ -47,7 +47,7 @@
       <!-- About Us Section End -->
 
 
-      QR Code Scan :
+      <!-- QR Code Scan : -->
 
       <svg width="215" height="215" viewBox="0 0 215 215" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M103.32 0.125977H95.9403V7.50601H103.32V0.125977Z" fill="black"/>
@@ -408,3 +408,20 @@
         <path d="M36.9011 177.247H14.761V199.387H36.9011V177.247Z" fill="black"/>
         </svg>
         
+
+
+        <!-- Features section -->
+        <!-- <div class="features-section border-10 border-[#00ffff] px-3">
+          <svg
+            class="w-full"
+            height="970"
+            viewBox="0 0 1920 970"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M1533.41 201.081H1920V960L0 970V0H1327.39C1356.42 0 1383.17 15.7207 1397.29 41.0788L1463.51 160.002C1477.63 185.36 1504.38 201.081 1533.41 201.081Z"
+              fill="#F40009"
+            />
+          </svg>
+        </div> -->
