Add mobile screens

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
       <!-- Navbar End -->
       <!-- Hero Section Start -->
       <section
-        class="relative px-8 md:px-0 border-2 border-[#00ff00] w-full pt-20"
+        class="relative px-8 md:px-0 border-2 border-[#00ff00] w-full pt-36 md:pt-20"
       >
         <div class="flex items-center justify-center border-2 border-[#0000ff]">
           <div class="hidden md:block div1">
@@ -355,8 +355,11 @@
             <div
               class="relative flex flex-col gap-6 items-center justify-center"
             >
+            <img class="inline md:hidden" src="./assets//mobile-screens.png" alt="">
               <h1 class="poppins-bold text-3xl md:text-6xl text-center">
                 Refresh your world,
+                <br>
+                Recharge through your app
               </h1>
               <span class="hidden md:absolute top-8 left-[25%] z-[-1]"
                 ><svg
@@ -371,12 +374,9 @@
                     fill="#F40009"
                   />
                 </svg>
-              </span>
-              <h1 class="poppins-bold text-3xl md:text-6xl text-center">
-                Recharge through your app
-              </h1>
+              </span> 
               <p
-                class="poppins-regular text-center text-md md:text-xl text-center"
+                class="poppins-regular text-center text-sm md:text-xl text-center"
               >
                 Discover a new way to enjoy your favorite Coca-Cola products
                 with CokePay, the ultimate cashless vending machine experience.
