--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
       </section>
       <!-- Query Form Start End -->
       <!-- FAQ Section Start -->
-      <section class="w-full my-10 md:my-20 mx-auto py-12 px-4 bg-[#F40009]">
+      <section class="w-full mx-auto py-12 px-4 bg-[#F40009]">
         <h1 class="poppins-bold text-6xl font-bold text-center mb-2 text-white">
           FAQ's
         </h1>
