--- a/index.html
+++ b/index.html
@@ -347,6 +347,9 @@
       <section
         class="relative px-8 md:px-0 border-2 border-[#00ff00] w-full pt-36 md:pt-20"
       >
+      <span class="hidden md:absolute md:block left-[18%] bottom-[60%] border-2 border-[#ff0000]">
+          <img class="h-32 w-32" src="./assets/Coke.png" alt="coke-logo">
+      </span> 
         <div class="flex items-center justify-center border-2 border-[#0000ff]">
           <div class="hidden md:block div1">
             <img class="" src="./assets/splash-screen.png" alt="" />
@@ -358,11 +361,7 @@
                 Refresh your world,
                 <br>
                 Recharge through your app
-              </h1>
-              <span class="md:absolute left-0 top-0 z-[-1] border-2 border-red"
-                >
-                <img class="h-32 w-32" src="./assets/Coke.png" alt="">
-              </span> 
+              </h1> 
               <span class="hidden md:absolute top-8 left-[25%] z-[-1]"
                 ><svg
                   width="176"
@@ -385,7 +384,7 @@
                 Say goodbye to coins and bills and hello to convenience and
                 rewards!
               </p> 
-              <div class="cursor-pointer rounded-full poppins-regular py:2 px-1 md:py-6 md:px-8 bg-[#F40009] text-white text-md md:text-lg hover:bg-black">Download App Now</div>
+              <div class="cursor-pointer rounded-full poppins-regular py:4 px-6 md:py-6 md:px-8 bg-[#F40009] text-white text-md md:text-lg hover:bg-black">Download App Now</div>
             </div>
             <img
               class="h-44 w-44 border-2 border-red absolute vending-machine hidden md:block"
