--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
       <!-- Navbar End -->
       <!-- Hero Section Start -->
       <section
-        class="relative px-8 md:px-0 border-2 border-[#00ff00] w-full pt-36 md:pt-20"
+        class="relative px-8 md:px-0 border-2 border-[#00ff00] w-full pt-32 pb-12  md:pb-0 md:pt-20"
       >
       <span class="hidden md:absolute md:block left-[18%] bottom-[60%] border-2 border-[#ff0000]">
           <img class="h-32 w-32" src="./assets/Coke.png" alt="coke-logo">
@@ -355,8 +355,8 @@
             <img class="" src="./assets/splash-screen.png" alt="" />
           </div>
           <div class="relative div2 border-2 border-red">
-            <div class="relative flex flex-col gap-6 items-center justify-center">
-            <img class="inline md:hidden" src="./assets//mobile-screens.png" alt="">
+            <div class="relative flex flex-col gap-3  md:gap-6 items-center justify-center">
+            <img class="inline md:hidden" src="./assets/mobile-screens.png" alt="">
               <h1 class="poppins-bold text-3xl md:text-6xl text-center">
                 Refresh your world,
                 <br>
@@ -377,14 +377,14 @@
                 </svg>
               </span> 
               <p
-                class="poppins-regular text-center text-sm md:text-xl text-center"
+                class="poppins-regular text-center text-sm md:text-lg text-center md:mx-0 md:mx-[4%] "
               >
                 Discover a new way to enjoy your favorite Coca-Cola products
                 with CokePay, the ultimate cashless vending machine experience.
                 Say goodbye to coins and bills and hello to convenience and
                 rewards!
               </p> 
-              <div class="cursor-pointer rounded-full poppins-regular py:4 px-6 md:py-6 md:px-8 bg-[#F40009] text-white text-md md:text-lg hover:bg-black">Download App Now</div>
+              <button class="cursor-pointer rounded-full poppins-regular py-4 px-6 md:py-6 md:px-8 bg-[#F40009] text-white text-md md:text-lg hover:bg-black">Download App Now</butt>
             </div>
             <img
               class="h-44 w-44 border-2 border-red absolute vending-machine hidden md:block"
@@ -523,7 +523,7 @@
             Got a Question? <br />
             <span class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 z-[-1]">
               <svg
-                    class="w-32 h-8 md:w-32 md:h-8 lg:w-32 lg:h-10"
+                    class="w-28 h-8 md:w-32 md:h-8 lg:w-32 lg:h-10"
                     viewBox="0 0 176 35"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
@@ -1180,6 +1180,16 @@
         </div>
       </section>
       <!-- Footer End --> 
+
+      <!-- Five Features Start -->
+
+      
+
+
+      <!-- Five Features End -->
+      
+
+
     </div>
     <script src="script.js"></script>
   </body>
