--- a/index.html
+++ b/index.html
@@ -906,10 +906,10 @@
               <p class="poppins-medium mb-[1em]">Contact Us</p>
               <div>
                 <p class="poppins-regular text-xs md:text-md">
-                  Toll Free - 1800 41 99099
+                  Contact number - +1 787-288-6540 
                 </p>
                 <p class="poppins-regular text-xs md:text-md">
-                  Email - cokepay@gmail.com
+                  Email - cokepaysupport@cc1net.com
                 </p>
                 <p class="poppins-regular text-xs md:text-md">
                   Monday - Saturday (9:00AM to 7:00PM IST)
