--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div class="main">
+    <div id="loader">
+       <img class="h-32 w-32" src="./assets//logo.svg" alt="loading-logo">
+    </div>
+    <div class="main"> 
+      
     <!-- Navbar Start -->
-      <nav class="w-full fixed bg-white z-[999] navbar py-4">
+      <nav class="w-full fixed bg-white z-[50] navbar py-4">
       <div class="flex items-center px-8 md:px-0 justify-between md:justify-center gap-14 text-md poppins-regular">
         <a href="#" class="hidden md:block hover:text-[#F40009]">Home</a>
         <a href="#features" class="hidden md:block hover:text-[#F40009]">Features</a>
@@ -45,10 +49,9 @@
     </nav>
     <!-- Navbar End -->
 
-
-      <!-- Hero Section Start -->
-      <section
-        class="relative px-8 md:px-0   w-full pt-32 pb-12  md:pb-0 md:pt-20"
+    <!-- Hero Section Start -->
+    <section
+        class="relative px-8 md:px-0 w-full pt-32 pb-12  md:pb-0 md:pt-20 overflow-hidden"
       >
       <span class="hidden md:absolute md:block left-[18%] bottom-[60%]  ">
           <img class="h-32 w-32" src="./assets/Coke.png" alt="coke-logo">
@@ -100,7 +103,9 @@
                 Say goodbye to coins and bills and hello to convenience and
                 rewards!
               </p> 
-              <button class="cursor-pointer rounded-full poppins-regular py-4 px-6 md:py-6 md:px-8 bg-[#F40009] text-white text-md md:text-lg hover:bg-black">Download App Now</butt>
+              <a href="https://download.cokepayapp.com/pr" target="_blank">
+                <button class="cursor-pointer rounded-full poppins-regular py-4 px-6 md:py-6 md:px-8 bg-[#F40009] text-white text-md md:text-lg hover:bg-black">Download App Now</butt>
+              </a>
             </div>
             <img
               class="h-48 w-56 absolute vending-machine hidden md:block"
@@ -108,15 +113,19 @@
               alt=""
             />
           </div>
-          <div class="hidden md:block div3">
+          <div class="hidden md:block div3 ">
             <img src="./assets/wallet.png" alt="" />
           </div>
         </div> 
-      </section>
-      <!-- Hero Section End -->
+    </section>
+    <!-- Hero Section End -->
 
-      <!-- Features section start --> 
-    <section id="features" class="py-20 bg-[#F40009] px-[5%]">
+    <!-- Features section start --> 
+    <section id="features" class="py-20 bg-[#F40009] px-[5%] relative">
+      <!--Add to above section:-  md:bg-transparent -->
+      <!-- <div class="absolute inset-0 hidden md:block bg-no-repeat bg-cover bg-center z-[-1]" 
+       style="background-image: url('./assets//background-svg.svg');">
+      </div> -->
       <div class="flex flex-wrap gap-8 px-4 md:px-8">
         <div class="w-full qr-code flex md:items-center justify-center gap-6 flex-col items-start md:flex-row mb-4">
           <div><img src="./assets/qr-code.svg" alt="SVG Image" /></div>
@@ -213,7 +222,7 @@
         </div>
         </div>
       </section>
-      <!-- Features section end -->
+    <!-- Features section end -->
 
        
       <!-- Query Form Start-->
@@ -301,7 +310,7 @@
  
       <!-- Footer Start -->
       <section
-        class="relative bg-[#000] px-2 md:px-24 py-4  text-white"
+        class="relative bg-[#000] px-2 md:px-24 py-4 text-white"
       >
         <div class="mx-[8%]">
           <div
@@ -597,31 +606,29 @@
             <div>
               <p class="poppins-medium mb-[1em]">Company</p>
               <div>
-                <p class="poppins-regular text-xs md:text-md">About us</p>
-                <p class="poppins-regular text-xs md:text-md">Contact us</p>
+                <p><a href="#features" class="poppins-regular text-xs md:text-md hover:text-[#F40009]">Features</a></p>
+                <p><a href="#contact" class="poppins-regular text-xs md:text-md hover:text-[#F40009]">Contact us</a></p>
               </div>
             </div>
             <div class="">
               <p class="poppins-medium mb-[1em]">Location</p>
-              <p class="poppins-regular text-xs md:text-md">United States</p>
+              <p class="poppins-regular text-xs md:text-md hover:text-[#F40009]">United States</p>
             </div>
             <div class="">
               <p class="poppins-medium mb-[1em]">Contact Us</p>
               <div>
-                <p class="poppins-regular text-xs md:text-md">
-                  Contact number - +1 787-288-6540 
+                <p class="poppins-regular text-xs md:text-md hover:text-[#F40009]">
+                  +1 787-288-6540 
                 </p>
-                <p class="poppins-regular text-xs md:text-md">
-                  Email - cokepaysupport@cc1net.com
-                </p>
-                <p class="poppins-regular text-xs md:text-md">
-                  Monday - Saturday (9:00AM to 7:00PM IST)
-                </p>
+                <a href="mailto:cokepaysupport@cc1net.com" class="poppins-regular text-xs md:text-md hover:text-[#F40009]">
+                  cokepaysupport@cc1net.com
+                </a>
               </div>
             </div>
             <div class="">
               <p class="poppins-medium mb-[1em]">Download the App</p>
               <div class="icons flex gap-2">
+                <a class="cursor-pointer" href="https://download.cokepayapp.com/pr" target="_blank">
                 <svg
                   width="129"
                   height="40"
@@ -752,6 +759,8 @@
                     </linearGradient>
                   </defs>
                 </svg>
+                </a>
+                <a class="cursor-pointer" href="https://download.cokepayapp.com/pr" target="_blank">
                 <svg
                   width="127"
                   height="40"
@@ -872,6 +881,7 @@
                     </clipPath>
                   </defs>
                 </svg>
+                </a>
               </div>
             </div>
           </div>
@@ -883,6 +893,18 @@
       </section>
       <!-- Footer End -->  
     </div>
+      <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+      integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="script.js"></script>
   </body>
 </html>
