--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </div>
           <div class="relative div2">
             <div class="flex flex-col gap-3 md:gap-6 items-center justify-center">
-            <img  class="inline md:hidden" src="./assets/mobile-screens.png" alt="">
+            <img id="mobile-screen" class="inline md:hidden" src="./assets/mobile-screens.png" alt="">
               <h1 class="poppins-bold text-3xl md:text-6xl text-center" id="heading">
                 Refresh your world,
                 <br>
