--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <div id="captcha" class="flex items-center justify-center border border-1 w-full h-10 text-[#000] bg-[#F8F6F4] font-bold text-xl" style="font-family: 'Courier New', Courier, monospace">
           <p id="captchaText" class="">p # f w q o</p>
         </div>
-        <button id="refreshCaptcha" class="p-2 bg-[#000] hover:bg-[#ff0000] text-white"><img class="h-5 w-5" src="./assets/refresh.svg" alt=""></button>
+        <button id="refreshCaptcha" class="p-2 bg-[#000] hover:bg-[#ff0000] text-white"><img class="h-5 w-5" src="./assets/refresh.svg" alt="Refresh"></button>
       </div>
       <input id="captcha-input" type="text" class="mt-2 border-2 border-[#000] peer h-10 w-full rounded-md bg-white px-4 font-thin outline-none transition-all duration-200 ease-in-out focus:bg-white focus:ring-2 focus:ring-blue-400" />
       <span id="captcha-error" class="text-red-600 hidden">Captcha is incorrect.</span>
@@ -626,7 +626,7 @@
             <div class="">
               <p class="poppins-medium mb-[1em]">Download the App</p>
               <div class="icons flex gap-2">
-                <a class="cursor-pointer" href="https://download.cokepayapp.com/pr" target="_blank">
+                <a class="cursor-pointer" href="https://play.google.com/store/apps/details?id=com.cokepay" target="_blank">
                 <svg
                   width="129"
                   height="40"
@@ -758,7 +758,7 @@
                   </defs>
                 </svg>
                 </a>
-                <a class="cursor-pointer" href="https://download.cokepayapp.com/pr" target="_blank">
+                <a class="cursor-pointer" href="https://apps.apple.com/in/app/cokepay/id1595025025" target="_blank">
                 <svg
                   width="127"
                   height="40"
