--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <!-- <div id="loader">
+    <div id="loader">
        <img class="h-32 w-32" src="./assets//logo.svg" alt="loading-logo">
-    </div> -->
+    </div>
     <div class="main"> 
       
     <!-- Navbar Start -->
