--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         <div id="captcha" class="flex items-center justify-center border border-1 w-full h-10 text-[#000] bg-[#F8F6F4] font-bold text-xl" style="font-family: 'Courier New', Courier, monospace">
           <p id="captchaText" class="">p # f w q o</p>
         </div>
-        <button id="refreshCaptcha" class="p-2 bg-[#000] hover:bg-[#ff0000] text-white"><img class="h-5 w-5" src="./assets/refresh.svg" alt="Refresh"></button>
+        <button id="refreshCaptcha" class="p-2 bg-[#000] hover:bg-[#ff0000] text-white h-10"><img class="h-5 w-5" src="./assets/refresh.svg" alt="Refresh"></button>
       </div>
       <input id="captcha-input" type="text" class="mt-2 border-2 border-[#000] peer h-10 w-full rounded-md bg-white px-4 font-thin outline-none transition-all duration-200 ease-in-out focus:bg-white focus:ring-2 focus:ring-blue-400" />
       <span id="captcha-error" class="text-red-600 hidden">Captcha is incorrect.</span>
@@ -641,7 +641,9 @@
               <p class="poppins-medium mb-[1em]">Contact Us</p>
               <div>
                 <p class="poppins-regular text-xs md:text-md hover:text-[#F40009]">
-                  +1 787-288-6540 
+                  <a href="tel:+17872886540" class="poppins-regular text-xs md:text-md hover:text-[#F40009]">
+                    +1 787-288-6540
+                  </a>
                 </p>
                 <a href="mailto:cokepaysupport@cc1net.com" class="poppins-regular text-xs md:text-md hover:text-[#F40009]">
                   cokepaysupport@cc1net.com
