--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
         <a href="#faq" class="block hover:text-[#F40009] mb-4">FAQ's</a>
         <!-- Mobile Dropdown -->
         <div class="flex md:items-center md:justify-center md:mr-8 cursor-pointer relative">
-          <h1 id="selectedLanguageMobile" class="md:mx-4">EN</h1>
-          <img class="h-5 w-5 cursor-pointer arrow" src="./assets/arrow.svg" alt="arrow" id="dropdownArrowMobile">
+          <div class="flex items-center justify-center">
+            <h1 id="selectedLanguageMobile" class="md:mx-4">EN</h1> 
+            <img class="h-5 w-5 cursor-pointer arrow" src="./assets/arrow.svg" alt="arrow" id="dropdownArrowMobile">
+          </div>
           <ul id="languageOptionsMobile" class="absolute top-8 left-0 bg-white border rounded-md hidden z-10">
             <li class="cursor-pointer px-4 py-2 hover:bg-[#F40009] hover:text-white" data-lang="EN">EN</li>
             <li class="cursor-pointer px-4 py-2 hover:bg-[#F40009] hover:text-white" data-lang="SP">SP</li>
